--- a/fileupload/app/views/pack.scala.html
+++ b/fileupload/app/views/pack.scala.html
@@ -27,7 +27,7 @@
 
 
 
-    @form(action = routes.Application.upload, 'enctype -> "multipart/form-data") {
+    <form method="POST" action="/upload/@packName" enctype="multipart/form-data">
       
       <input type="file" name="picture[]" multiple="multiple" accept="image/*" class="file-input">
       
@@ -35,7 +35,7 @@
           <input type="submit">
       </p>
       
-    }
+    </form>
   </div>
 
   <script type="text/javascript">
@@ -65,21 +65,24 @@
         });
       });
 
-      var packNameInput = $('pack-page .pack-name-input');
-      var packNameTip = $('pack-page .tip');
-      var fileInput = $('pack-page .file-input');
+      var form = $('#pack-page form');
+      var packNameInput = $('#pack-page .pack-name-input');
+      var packNameTip = $('#pack-page .tip');
+      var fileInput = $('#pack-page .file-input');
       if(packNameInput[0]) {
         packNameInput.blur(function() {
-          if(packNameInput.val().indexOf(',') >= 0) {
-            packNameTip.html('名字不能含有“,”');
+          packName = packNameInput.val();
+          if((packName.indexOf(',') >= 0) || (packName.indexOf('/') >= 0)) {
+            packNameTip.html('名字不能含有",""/"');
           } else {
             packNameTip.html('');
+            form.attr('action', '/upload/' + packName);
           }
         });
       }
 
-      var form = $('#pack-page form');
       form.submit(function() {
+        event.preventDefault();
         var flag = true;
         if(packNameInput[0]) {
           var packName = packNameInput.val();
@@ -87,12 +90,11 @@
             packNameTip.html('');
           } else {
             flag = false;
-            packNameTip.html('名字不能为空且不能含有“,”');
+            packNameTip.html('名字不能为空且不能含有“,""/”');
           }
-        } else {
-          if(!fileInput.val()) {
-            flag = false;
-          }
+        }
+        if(!fileInput.val()) {
+          flag = false;
         }
         if(flag) {
           this.submit();
